# src/controllers/index.ts
@@ -5,4 +5,5 @@ export * from "./enterprise.controller";
 export * from "./flow.controller";
 export * from "./pricingPlan.controller";
 export * from "./session.controller";
+export * from "./subMessage.controller";
 /* export * from "./example.controller"; */
