# src/docs/swagger-output.json
@@ -37,7 +37,7 @@
       "description": "Rutas genéricas"
     }
   ],
-  "schemes": "http",
+  "schemes": "https",
   "securityDefinitions": {
     "bearerAuth": {
       "type": "apiKey",
@@ -246,6 +246,139 @@
         ]
       }
     },
+    "/flows/getAllWithMessages": {
+      "get": {
+        "tags": [
+          "Flow"
+        ],
+        "description": "",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/flows/getAll": {
+      "get": {
+        "tags": [
+          "Flow"
+        ],
+        "description": "Esta ruta trae todos los flujos con sus mensajes y submensajes relacionados, incluyendo los submensajes hijos.",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/flows/getOne/{id}": {
+      "get": {
+        "tags": [
+          "Flow"
+        ],
+        "description": "Esta ruta trae un flujo específico, sus mensajes relacionados y los submensajes hasta los hijos de los submensajes.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/flows/softDelete/{id}": {
+      "delete": {
+        "tags": [
+          "Flow"
+        ],
+        "description": "Realiza un borrado lógico de un flujo específico",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del flujo a eliminar"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/flows/getOneWithMenuMessagesAndSubMessages/{id}": {
+      "get": {
+        "tags": [
+          "Flow"
+        ],
+        "description": "Obtiene un flujo específico con solo los mensajes que tienen `option == \"MENU\"` y sus submensajes.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/flows/getAllWithMenuMessagesAndSubMessages": {
+      "get": {
+        "tags": [
+          "Flow"
+        ],
+        "description": "Obtiene todos los flujos con solo los mensajes que tienen `option == \"MENU\"` y sus submensajes.",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
     "/messages/getAllWithFlow": {
       "get": {
         "tags": [
@@ -399,6 +532,121 @@
             "description": "Número de orden del mensaje"
           }
         ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/messages/AllWithChildren": {
+      "get": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Esta ruta trae todos los mensajes junto con sus submensajes y sus respectivos submensajes hijos.",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/messages/getOneWithChildren/{id}": {
+      "get": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Esta ruta trae un mensaje específico y sus submensajes, incluyendo los submensajes hijos.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/messages/update/{id}": {
+      "put": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Esta ruta actualiza un mensaje específico junto con sus detalles. Se puede actualizar la relación con flow y enterprise si es necesario.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/messages/softDelete/{id}": {
+      "delete": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Realiza un borrado lógico de un Mensaje específico",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del mensaje a eliminar"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/messages/menuWithChildren": {
+      "get": {
+        "tags": [
+          "Message"
+        ],
+        "description": "Esta ruta trae todos los mensajes con opción \"MENU\" junto con sus submensajes y sus respectivos submensajes hijos.",
         "responses": {
           "500": {
             "description": "Internal Server Error"
@@ -706,6 +954,156 @@
             "description": ""
           }
         }
+      }
+    },
+    "/subMessages/getAll": {
+      "get": {
+        "tags": [
+          "SubMessage"
+        ],
+        "description": "Esta ruta trae todos los submensajes registrados en el sistema.",
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/subMessages/getOne/{id}": {
+      "get": {
+        "tags": [
+          "SubMessage"
+        ],
+        "description": "Esta ruta obtiene un submensaje específico por su ID, incluyendo su mensaje padre y sus submensajes hijos si los tiene.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/subMessages/create/{id}": {
+      "post": {
+        "tags": [
+          "SubMessage"
+        ],
+        "description": "Esta ruta crea un nuevo submensaje y lo asocia con el mensaje especificado por ID.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/subMessages/update/{id}": {
+      "put": {
+        "tags": [
+          "SubMessage"
+        ],
+        "description": "Esta ruta actualiza un submensaje específico, permitiendo modificar sus datos y la relación con su mensaje padre.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/subMessages/softDelete/{id}": {
+      "delete": {
+        "tags": [
+          "SubMessage"
+        ],
+        "description": "Realiza un borrado lógico de un SubMensaje específico",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID de un sub mensaje a eliminar"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
+      }
+    },
+    "/subMessages/recover/{id}": {
+      "put": {
+        "tags": [
+          "SubMessage"
+        ],
+        "description": "Recupera un SubMensaje previamente eliminado lógicamente, cambiando su estado a no eliminado.",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "ID del sub mensaje a recuperar"
+          }
+        ],
+        "responses": {
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ]
       }
     },
     "/{entidad}/": {
