# src/entities/index.ts
@@ -1,3 +1,4 @@
+
 export * from "./base/base.model";
 export * from "./agent";
 export * from "./client";
@@ -6,3 +7,4 @@ export * from "./message/message.model";
 export * from "./flow/flow.model";
 export * from "./pricingPlan/pricingPlan.model";
 export * from "./example/example.model";
+export * from "./subMessage/subMessage.model";
