# src/routes/flow.route.ts
@@ -5,6 +5,7 @@ import { FlowDto } from "../entities/flow/dtos/flow.dto";
 import { FlowController } from "../controllers/flow.controller";
 import { authMiddleware } from "../middlewares/authMiddleware";
 import { validateSchema } from "../middlewares";
+import { checkRoleAuth } from "../middlewares/roleProtectionMiddleware";
 // import { Router } from "express";
 
 export const flowRouter = () => {
@@ -90,6 +91,96 @@ export const flowRouter = () => {
      
      */
       flowController.updateFlow(req, res)
+  );
+  flowRoutes.get(
+    "/getAllWithMessages",
+    authMiddleware,
+    checkRoleAuth(["admin", "redactor"]),
+    (req, res) =>
+      /* 
+      #swagger.path = '/flows/getAllWithMessages'
+      #swagger.tags = ['Flow']
+      #sagger.description = 'Esta ruta trae todos los flujos y su relación con mensajes. '
+      #swagger.security = [{
+						"bearerAuth": []
+					}]
+     
+     */
+          flowController.findAllFlowsWithMessages(req, res)
+  );
+
+  flowRoutes.get(
+    "/getAll",
+    authMiddleware,
+    checkRoleAuth(["admin", "redactor"]),
+    (req, res) =>
+      /* 
+      #swagger.path = '/flows/getAll'
+      #swagger.tags = ['Flow']
+      #swagger.description = 'Esta ruta trae todos los flujos con sus mensajes y submensajes relacionados, incluyendo los submensajes hijos.'
+      #swagger.security = [{ "bearerAuth": [] }]
+      */
+      flowController.getAllWithMessagesAndSubMessages(req, res)
+  );
+  
+  flowRoutes.get(
+    "/getOne/:id",
+    authMiddleware,
+    checkRoleAuth(["admin", "redactor"]),
+    (req, res) =>
+      /* 
+      #swagger.path = '/flows/getOne/{id}'
+      #swagger.tags = ['Flow']
+      #swagger.description = 'Esta ruta trae un flujo específico, sus mensajes relacionados y los submensajes hasta los hijos de los submensajes.'
+      #swagger.security = [{ "bearerAuth": [] }]
+      */
+      flowController.getOneWithMessagesAndSubMessages(req, res)
+  );
+
+  // Soft delete de un flujo
+  flowRoutes.delete(
+    "/softDelete/:id",
+    authMiddleware,
+    checkRoleAuth(["admin", "redactor"]),
+    (req, res) =>
+      /* 
+        #swagger.path = '/flows/softDelete/{id}'
+        #swagger.tags = ['Flow']
+        #swagger.description = 'Realiza un borrado lógico de un flujo específico'
+        #swagger.parameters['id'] = { description: 'ID del flujo a eliminar' }
+        #swagger.security = [{
+          "bearerAuth": []
+        }]
+      */
+      flowController.softDeleteFlow(req, res)
+  );
+
+  flowRoutes.get(
+    "/getOneWithMenuMessagesAndSubMessages/:id",
+    authMiddleware,
+    checkRoleAuth(["admin", "redactor"]),
+    (req, res) =>
+      /* 
+      #swagger.path = '/flows/getOneWithMenuMessagesAndSubMessages/{id}'
+      #swagger.tags = ['Flow']
+      #swagger.description = 'Obtiene un flujo específico con solo los mensajes que tienen `option == "MENU"` y sus submensajes.'
+      #swagger.security = [{ "bearerAuth": [] }]
+      */
+      flowController.getOneWithMenuMessagesAndSubMessages(req, res)
+  );
+
+  flowRoutes.get(
+    "/getAllWithMenuMessagesAndSubMessages",
+    authMiddleware,
+    checkRoleAuth(["admin", "redactor"]),
+    (req, res) =>
+      /* 
+      #swagger.path = '/flows/getAllWithMenuMessagesAndSubMessages'
+      #swagger.tags = ['Flow']
+      #swagger.description = 'Obtiene todos los flujos con solo los mensajes que tienen `option == "MENU"` y sus submensajes.'
+      #swagger.security = [{ "bearerAuth": [] }]
+      */
+      flowController.getAllWithMenuMessagesAndSubMessages(req, res)
   );
 
   // flowRoutes.get("/", (req, res) => flowController.getAll(req, res));
